# Documentation

./: .all-contributorsrc  .gitattributes  .gitignore  .gitmodules  .gitpod.yml  CONTRIBUTING.md  Doxyfile  Makefile  README.md  crowdin.yml  learning-from-linear-regression.ipynb  megengine-basic-concepts.ipynb  output.csv  requirements.txt
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-and-deploy.yml  build-dev.yml  build-master.yml  build.yml  codeql-analysis.yml  deploy-dev.yml  deploy.yml  github-pages-deploy.yml  sphinx-build.yml
doxyxml/: README.md  lite.config
examples/: device.ipynb  quick-start.py  ~formatting_0-94_962523_quick-start.py
examples/beginner/: conv-network-cifar10.py  inference-with-pretrained-model.py  linear-classification-fashion.py  linear-classification.py  linear-regression.py  megengine-basic-fit-line.py  neural-network-cifar10.py  neural-network.py
examples/deploy/lite/: CMakeLists.txt  ImageNetLabels.h  image.py  inference.cpp  inference.py  main.cpp  model.py
examples/loss/: supcon.py
examples/models/: alexnet.py  densenet.py  efficientnet.py  genet.py  googlenet.py  inceptionnetv3.py  mobilenetv3.py  nasnet.py  resnet.py  squeezenet.py  unet.py  utils.py
locales/gettext/: index.pot
notebooks/getting-started/: beginner.ipynb  boston-housing.ipynb  from-linear-regression-to-linear-classification.ipynb  learning-from-linear-regression.ipynb  megengine-basic-concepts.ipynb
scripts/: bootstrap.sh  build_for_oss.sh  bump_version.sh  coverage.py
scripts/gettext/: prune.py
scripts/oss/: build_for_oss.sh  gen_version.py  update.py
source/: 404.rst  bugs.rst  conf.py  glossary.rst  index.rst  license.rst  refs.bib
source/_templates/: 404.html  indexcontent.html  layout.html
source/development/: architecture-design.rst  index.rst  meps.rst  workflow.rst
source/developmet/: architecture-design.rst  (+9 more)
tmp/: versions.json
(+14112 files in other folders)
